--- a/css/korona/hra.css
+++ b/css/korona/hra.css
@@ -37,12 +37,19 @@
     height: 100%;
 }
 
-#game-over {
+.endGameWindow {
     display: none;
     font-size: 6em;
     position: absolute;
     top: 40vh;
     left: 30vw;
     z-index: 10;
+}
+
+#game-lost {
     background-color: red;
+}
+
+#game-won {
+    background-color: green;
 }
