--- a/templates/sedma/hrat.html
+++ b/templates/sedma/hrat.html
@@ -60,7 +60,7 @@
   <footer>
     <div>
       <a href="/">nejvyzkum.cz</a>/<a href="/sedma-trida">7.třída</a>:
-      <a href="/sedma-trida/hrat">hrát</a> - <a href="/sedma-trida/profil">profil</a>
+      <a href="/sedma-trida/hrat">hrát</a> - <a href="/profil">profil</a>
     </div>
     <div>
       🄯2020
