--- a/templates/vysledky/profil.html
+++ b/templates/vysledky/profil.html
@@ -45,8 +45,7 @@
 
   <footer>
     <div>
-      <a href="/">nejvyzkum.cz</a>/<a href="/sedma-trida">7.třída</a>:
-      <a href="/sedma-trida/hrat">hrát</a> - <a href="/sedma-trida/profil">profil</a>
+      <a href="/">nejvyzkum.cz</a> - <a href="/profil">profil</a>
     </div>
     <div>
       🄯2020
