Move footer into separate template

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,15 +62,7 @@
     </div>
   </div>
 
-  <footer>
-    <div>
-    </div>
-    <div>
-      🄯2020
-      <a href="https://barborasimkova.cz">Šimková</a>,
-      <a href="https://gajdosik.org">Gajdošík</a>
-    </div>
-  </footer>
+  {% module Template("parts/footer.html") %}
 
 </div>
 </body>
