--- a/templates/sedma/hrat.html
+++ b/templates/sedma/hrat.html
@@ -57,17 +57,7 @@
     </div>
   </div>
 
-  <footer>
-    <div>
-      <a href="/">nejvyzkum.cz</a>/<a href="/sedma-trida">7.třída</a>:
-      <a href="/sedma-trida/hrat">hrát</a> - <a href="/profil">profil</a>
-    </div>
-    <div>
-      🄯2020
-      <a href="https://barborasimkova.cz">Šimková</a>,
-      <a href="https://gajdosik.org">Gajdošík</a>
-    </div>
-  </footer>
+  {% module Template("parts/footer.html") %}
 
 </body>
 </html>
