--- a/templates/vysledky/profil.html
+++ b/templates/vysledky/profil.html
@@ -49,16 +49,7 @@
     <p class="disclaimer">*Vizualizace dat sesbíraných od návštěvníků této stránky. Nejedná se o výsledky osobnostního či psychologického testu vyplněného zobrazenou osobou. Nejde o tvrzení o duševním stavu zobrazené osoby. Nejde o její lékařskou diagnózu.</p>
   </div>
 
-  <footer>
-    <div>
-      <a href="/">nejvyzkum.cz</a> - <a href="/profil">profil</a>
-    </div>
-    <div>
-      🄯2020
-      <a href="https://barborasimkova.cz">Šimková</a>,
-      <a href="https://gajdosik.org">Gajdošík</a>
-    </div>
-  </footer>
+  {% module Template("parts/footer.html") %}
 
 </body>
 
