--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
-    <link rel="stylesheet" href="/css/korona/hra.css">
-    <link rel="stylesheet" href="/css/main.css">
+
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/korona/hra.css">
 
     <script src="/js/korona/hra.js"></script>
     <script type="application/javascript">
@@ -52,7 +53,7 @@
       </div>
     </div>
 
-
+    {% module Template("parts/footer.html") %}
 
   </body>
 </html>
