--- a/templates/korona/index.html
+++ b/templates/korona/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>title</title>
-    <link rel="stylesheet" href="style.css">
+    
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/korona/index.css">
+
     <script src="script.js"></script>
   </head>
   <body>
@@ -13,6 +16,8 @@
     <form action="" method="post">
       <input type="submit" value="Zalozit hru" class="submit"/>
     </form>
+
+    {% module Template("parts/footer.html") %}
 
   </body>
 </html>
