--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cz">
   <head>
+    {% module Template("parts/tracking.html") %}
+
     <meta charset="utf-8">
     <title>title</title>
 
