--- a/templates/sedma/index.html
+++ b/templates/sedma/index.html
@@ -2,15 +2,7 @@
 
 <html lang="cz">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158083031-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-158083031-1');
-    gtag('config', 'UA-158083031-4');
-  </script>
+  {% module Template("parts/tracking.html") %}
 
   <meta charset="utf-8">
 
