--- a/templates/404.html
+++ b/templates/404.html
@@ -2,24 +2,19 @@
 
 <html lang="cz">
 <head>
-  {% module Template("parts/tracking.html") %}
-  
   <meta charset="utf-8">
-
-  <title>Nejvyzkum.cz - 404</title>
-  <meta name="description" content="Nejvyzkum.cz - 404">
-  <meta name="author" content="Andreas Gajdosik">
-  <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/404.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
-  <meta property="og:title" content="Nejvyzkum.cz - 404">
-  <meta property="og:description" content="Něco se ošklivě pokazilo a určitě je to jen a jen vaše chyba. Tak držte hubu a krok a přidejte!">
-  <meta property="og:image" content="/favicon.ico">
-  <meta property="og:url" content="https://www.nejvyzkum.cz/404">
-  <meta name="twitter:card" content="summary_large_image">
+  {% module Template("parts/tracking.html") %}
+  {% module Template("parts/meta.html",
+  subtitle="404",
+  url=url,
+  image="https://nejvyzkum/favicon.ico",
+  description="Něco se ošklivě pokazilo a určitě je to jen a jen vaše chyba. Tak držte hubu a krok a přidejte!"
+  ) %}
+
 </head>
 
 <body>
