--- a/templates/sedma/index.html
+++ b/templates/sedma/index.html
@@ -2,25 +2,21 @@
 
 <html lang="cz">
 <head>
-  {% module Template("parts/tracking.html") %}
-
   <meta charset="utf-8">
-
-  <title>Nejvyzkum.cz - {{ subtitle }}</title>
-  <meta name="description" content="Nejvyzkum.cz - {{ subtitle }}">
-  <meta name="author" content="Andreas Gajdosik">
-  <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/sedma/index.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
-  <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
-  <meta property="og:description" content="Nahlížíme do duše nejbohatších. Zkrátka ten nejlepší z možných výzkumů!">
-  <meta property="og:image" content="http://myelin.org/wp-content/uploads/2017/08/image05.jpg">
-  <meta property="og:url" content="https://www.nejvyzkum.cz">
-  <meta name="twitter:card" content="summary_large_image">
+  {% module Template("parts/tracking.html") %}
+  {% module Template("parts/meta.html",
+  subtitle="Sedmá třída: psychologická profilace nejbohatších",
+  url=url,
+  image="http://myelin.org/wp-content/uploads/2017/08/image05.jpg",
+  description="V následujícím testu Vám budeme zobrazovat dvojice miliardářů a Vy budete na základě jejich portrétů vybírat toho, který lépe odpovídá položené otázce. S Vaší pomocí pak budeme schopni profilovat zkoumané osoby skrze algoritmy psychologických testů SCL90 a BigFive."
+  ) %}
+
   <script src="https://kit.fontawesome.com/96556682ed.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
