--- a/templates/vysledky/profil.html
+++ b/templates/vysledky/profil.html
@@ -2,25 +2,21 @@
 
 <html lang="cz">
 <head>
-  {% module Template("parts/tracking.html") %}
-
   <meta charset="utf-8">
-
-  <title>Nejvyzkum.cz - {{ profile["name"] }}</title>
-  <meta name="description" content="Nejvyzkum.cz - {{ profile['name'] }}">
-  <meta name="author" content="Andreas Gajdosik">
-  <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-
   <link rel="stylesheet" type="text/css" href="/css/main.css">
   <link rel="stylesheet" type="text/css" href="/css/sedma/profil.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
+  {% module Template("parts/tracking.html") %}
+  {% module Template("parts/meta.html",
+  subtitle=profile['name'],
+  url=url,
+  image="{{ profile['image'] }}",
+  description="Přehled osobnostních výsledků z námi získaných dat. Zkrátka výsledky toho nejlepšího z možných výzkumů!"
+  ) %}
+
   <script src="/js/Chart.js"></script>
 
-  <meta property="og:title" content="Nejvyzkum.cz - {{ profile['name'] }}">
-  <meta property="og:description" content="Přehled osobnostních výsledků z námi získaných dat. Zkrátka výsledky toho nejlepšího z možných výzkumů!">
-  <meta property="og:image" content="{{ profile['image'] }}">
-  <meta name="twitter:card" content="summary_large_image">
 </head>
 
 <body>
