Init results page - basic structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
     subtitle=subtitle,
     url=url,
-    image="https://nejvyzkum/favicon.ico",
+    image="http://myelin.org/wp-content/uploads/2017/08/image05.jpg",
     description="Nahlížíme do duše nejbohatších. Zkrátka ten nejlepší z možných výzkumů!"
   ) %}
 
