--- a/templates/vysledky/profil.html
+++ b/templates/vysledky/profil.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <link rel="stylesheet" type="text/css" href="/css/sedma/profil.css">
+  <link rel="stylesheet" type="text/css" href="/css/vysledky/profil.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
   {% module Template("parts/tracking.html") %}
