--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet" type="text/css" href="/css/korona/hra.css">
+    <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
     {% module Template("parts/tracking.html") %}
     {% module Template("parts/meta.html",
