Add upper menu template

--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -21,6 +21,7 @@
 
 </head>
   <body>
+    {% module Template("parts/upper.html") %}
 
     <div id="game-lost" class="endGameWindow">
       <div>GAME OVER!</div>
