--- a/templates/korona/index.html
+++ b/templates/korona/index.html
@@ -16,10 +16,12 @@
 
   </head>
   <body>
+    {% module Template("parts/upper.html") %}
     <div class="main">
 
       <h1 class="textcenter">
-        Korona speciál - online hra
+        <span class="cz">Korona speciál - online hra</span>
+        <span class="en">Corona special - online game</span>
       </h1>
     
       <p class="textcenter">
