--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -2,8 +2,8 @@
 
 <footer>
     <div>
-      <a href="/">nejvyzkum.cz</a>
-      <a href="/sedma-trida">7.třída</a>
+      <a href="/sedma-trida">výzkum</a>
+      <a href="/korona">hra</a>
       <a href="/profil">výsledky</a>
     </div>
     <div>
