--- a/templates/vysledky/profil.html
+++ b/templates/vysledky/profil.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  {% module Template("parts/upper.html") %}
 
   <div class="heading">
     <span class="name">{{ profile["name"] }}</span>
