--- a/css/korona/hra.css
+++ b/css/korona/hra.css
@@ -10,6 +10,7 @@
     font-size: 0.65em;
     padding: 5px 5px;
     position: relative;
+    cursor: pointer;
 }
 
 .criminal{
@@ -94,6 +95,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    cursor: not-allowed;
 }
 
 .endGameWindow {
