--- a/templates/index.html
+++ b/templates/index.html
@@ -41,11 +41,11 @@
     <div class="buttons">
 
       <form action="/sedma-trida" method="get">
-        <input type="submit" value="Sedmá třída!" class="button active" />
+        <input type="submit" value="SCL90 + Big5" class="button active" />
       </form>
 
       <form action="/sedma-trida" method="get">
-        <input type="submit" value="Korona speciál" class="button disabled" disabled/>
+        <input type="submit" value="Korona (hra)" class="button disabled" disabled/>
       </form>
     </div>
   </div>
