--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" type="text/css" href="/css/parts/footer.css">
 
 <footer>
-    <div>
-      <a href="/sedma-trida">výzkum</a>
+    <div class="menuItems">
+      <a href="/sedma-trida">dotazník</a>
       <a href="/korona">hra</a>
       <a href="/profil">výsledky</a>
     </div>
