--- a/css/korona/hra.css
+++ b/css/korona/hra.css
@@ -114,3 +114,52 @@
 #game-won {
     background-color: green;
 }
+
+#napovedaLayer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.9);
+    cursor: zoom-out;
+}
+
+#napoveda{
+    position: relative;
+    margin: 10vh auto;
+    width: 800px;
+    min-height: 400px;
+    background-color: white;
+    padding: 20px;
+}
+
+#napovedaVitejtePanel{
+    margin: 0 0 40px 0;
+}
+
+.napovedah1{
+    font-size: 1.5rem;
+    margin: 20px 0;
+    font-weight: bold;
+}
+
+.napovedah2{
+    font-weight: bold;
+    font-size: 1.2rem;
+    margin: 10px 0;
+}
+
+.napovedaPravidlo{
+    margin: 10px 0; 
+}
+
+#napoveda p {
+    margin: 30px 0;
+}
+
+#napovedaClose{
+    text-decoration: underline;
+    cursor: pointer;
+}
