Activate link to korona game

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,8 @@
         <input type="submit" value="SCL90 + Big5 (dotazník)" class="button active" />
       </form>
 
-      <form action="/sedma-trida" method="get">
-        <input type="submit" value="Covid19 (online hra)" class="button disabled" disabled/>
+      <form action="/korona" method="get">
+        <input type="submit" value="Covid19 (online hra)" class="button active"/>
       </form>
     </div>
   </div>
