--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -41,7 +41,7 @@
           <div>
             Hra je určena pro 2 hráče.
             Jeden hraje v roli svědka, druhá v roli vyšetřovatele.
-            Pošlete link vašemu spoluhráči nebo spoluhráčce, aby se mohl/a připojit:
+            Pošlete link vašemu spoluhráči nebo spoluhráčce, aby se mohl/a připojit k Vaší seanci:
             <div id="link"></div>
           </div>
         </div>
