--- a/css/korona/hra.css
+++ b/css/korona/hra.css
@@ -134,7 +134,7 @@
 #napoveda{
     position: relative;
     margin: 10vh auto;
-    width: 800px;
+    max-width: 800px;
     min-height: 400px;
     background-color: white;
     padding: 20px;
