--- a/css/korona/hra.css
+++ b/css/korona/hra.css
@@ -104,20 +104,42 @@
 }
 
 .endGameWindow {
-    display: none;
-    font-size: 6em;
     position: absolute;
-    top: 40vh;
-    left: 30vw;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
     z-index: 10;
+    display: none;
+}
+
+.endGameContainer{
+    position: relative;
+    margin: 5vh auto;
+    max-width: 450px;
+    background-color: white;
+    padding: 20px;
+}
+
+.endGameH1{
+    font-size: 1.2rem;
+    margin: 30px 0;
+    text-align: center;
+}
+
+.restart{
+    text-decoration: underline;
+    cursor: pointer;
+    text-align: center;
+    margin: 30px 0;
 }
 
 #game-lost {
-    background-color: red;
+    background-color: rgba(200, 0, 0, 0.400);
 }
 
 #game-won {
-    background-color: green;
+    background-color: rgba(0, 200, 0, 0.400);
 }
 
 #napovedaLayer{
@@ -172,9 +194,4 @@
 #link{
     margin: 40px;
     font-style: italic;
-}
-
-.restart{
-    text-decoration: underline;
-    cursor: pointer;
 }
