--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ html, body {
     width: 800px;
     max-width: 75vw;
     margin: 50px auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
 }
 
 h1 {
