Fix broken preview image

--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -10,7 +10,7 @@
     {% module Template("parts/meta.html",
     subtitle="Neobvyklí podezřelí (online hra)",
     url=url,
-    image="http://myelin.org/wp-content/uploads/2017/08/image05.jpg",
+    image="/img/moneybrain.jpg",
     description="Podaří se Vám a Vašemu spoluhráči vypátrat, který z českých miliardářů je zločinec? Dokážete odhadnout úsudky druhého a dojít zdárného konce? Zjistěte to teď!"
     ) %}
 
