--- a/templates/sedma/hrat.html
+++ b/templates/sedma/hrat.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
     subtitle=subtitle,
     url=url,
-    image="http://myelin.org/wp-content/uploads/2017/08/image05.jpg",
+    image="/img/moneybrain.jpg",
     description="Zadejte Váš názor a pomožte nám nahlédnout do duše nejbohatších. Zapojte se do toho nejlepší z možných výzkumů!"
   ) %}
 
