--- a/templates/sedma/index.html
+++ b/templates/sedma/index.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
   subtitle="Sedmá třída: psychologická profilace nejbohatších",
   url=url,
-  image="http://myelin.org/wp-content/uploads/2017/08/image05.jpg",
+  image="/img/moneybrain.jpg",
   description="V následujícím testu Vám budeme zobrazovat dvojice miliardářů a Vy budete na základě jejich portrétů vybírat toho, který lépe odpovídá položené otázce. S Vaší pomocí pak budeme schopni profilovat zkoumané osoby skrze algoritmy psychologických testů SCL90 a BigFive."
   ) %}
 
