Improve preview images

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
   subtitle="404",
   url=url,
-  image="https://nejvyzkum/favicon.ico",
+  image="https://nejvyzkum.cz/favicon.ico",
   description="Něco se ošklivě pokazilo a určitě je to jen a jen vaše chyba. Tak držte hubu a krok a přidejte!"
   ) %}
 
