--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
     subtitle=subtitle,
     url=url,
-    image="/img/moneybrain.jpg",
+    image="https://nejvyzkum.cz/img/moneybrain.jpg",
     description="Nahlížíme do duše nejbohatších. Zkrátka ten nejlepší z možných výzkumů!"
   ) %}
 
