--- a/templates/sedma/index.html
+++ b/templates/sedma/index.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
   subtitle="Sedmá třída: psychologická profilace nejbohatších",
   url=url,
-  image="/img/moneybrain.jpg",
+  image="https://nejvyzkum.cz/img/moneybrain.jpg",
   description="V následujícím testu Vám budeme zobrazovat dvojice miliardářů a Vy budete na základě jejich portrétů vybírat toho, který lépe odpovídá položené otázce. S Vaší pomocí pak budeme schopni profilovat zkoumané osoby skrze algoritmy psychologických testů SCL90 a BigFive."
   ) %}
 
