--- a/templates/sedma/zajimavost.html
+++ b/templates/sedma/zajimavost.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
     subtitle=subtitle,
     url="https://www.nejvyzkum.cz/sedma-trida/zajimavost",
-    image="/img/moneybrain.jpg",
+    image="https://nejvyzkum.cz/img/moneybrain.jpg",
     description="Náhodná zajímavost ze světa nejbohatších. Co si o nich myslí ostatní? Tomu neuvěříte!"
   ) %}
 
