--- a/templates/vysledky/vysledky.html
+++ b/templates/vysledky/vysledky.html
@@ -11,7 +11,7 @@
   {% module Template("parts/meta.html",
   subtitle=subtitle,
   url=url,
-  image="/img/moneybrain.jpg",
+  image="https://nejvyzkum.cz/img/moneybrain.jpg",
   description="Rozcestník k podrobným výsledkům nejlepšího z možných výzkumů. Vyhledejte jakoukoliv ze zkoumaných osob a zobrazte výsledky."
   ) %}
 
