--- a/templates/komise/komise.html
+++ b/templates/komise/komise.html
@@ -4,12 +4,15 @@
 <head> 
   <meta charset="utf-8">
 
+  <meta property="og:title" content="{{ title }}">
+  <meta property="og:description" content="{{ text }}">
+  <meta property="og:image" content="{{ image }}">
 
 </head>
 
 <body>
 
-{{ headers }}
+{{ text }}
 
 </body>
 </html>
