Remove portfolio links

--- a/templates/parts/footer.html
+++ b/templates/parts/footer.html
@@ -8,7 +8,7 @@
     </div>
     <div>
       🄯2020
-      <a href="https://barborasimkova.cz">Šimková</a>,
-      <a href="https://gajdosik.org">Gajdošík</a>
+      Šimková,
+      Gajdošík
     </div>
 </footer>
